# xchk-multiple-choice-strategies

./: .gitignore  boot_django.py  load_tests.py  pyproject.toml  setup.py
xchk_multiple_choice_strategies/: MultipleChoiceChecker.py  MultipleChoiceLexer.py  MultipleChoicePrinter.py  apps.py  strats.py  tests.py
