[tool.poetry]
name = "xchk_multiple_choice_strategies"
version = "0.0.1"
description = "Checks and strategies for multiple choice questions in the xchk system"
authors = ["Vincent Nys <vincentnys@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
antlr4-python3-runtime = "^4.8"

[tool.poetry.dev-dependencies]
xchk-core = "0.2.0"
django-allauth = "0.40.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
